@@ -20,6 +20,7 @@
 #include "csa.h"
 #include "tables.h"
 #include "util.h"
+#include "notify.h"
 
 static unsigned long ts_pack;
 static int ts_pack_shown;
@@ -122,12 +123,18 @@ static void decode_buffer(struct ts *ts, uint8_t *data, int data_len) {
 
 	int scramble_idx_old = 0;
 
+	time_t now = time(NULL);
+
 	// Prepare batch structure
 	for (i = 0; i < batch_sz; i++) {
 		uint8_t *ts_packet = data + (i * 188);
 
 		uint16_t pid = ts_packet_get_pid(ts_packet);
 		if (pidmap_get(&ts->pidmap, pid) && ts_packet_is_scrambled(ts_packet)) {
+			if (ts_packet_is_scrambled(ts_packet) && ts->last_scrambled_packet_ts != now) {
+				ts->stream_is_encrypted = 1;
+				ts->last_scrambled_packet_ts = now;
+			}
 			if (ts->key.is_valid_cw) {
 				int scramble_idx = ts_packet_get_scrambled(ts_packet);
 				if (!scramble_idx_old)
@@ -172,6 +179,13 @@ static void decode_buffer(struct ts *ts, uint8_t *data, int data_len) {
 					ts_packet_set_pid(ts_packet, 0x1fff);
 			}
 		}
+	}
+
+	if (ts->last_scrambled_packet_ts && ts->last_scrambled_packet_ts < now - 5) {
+		ts_LOGf("N/E | No encrypted packet came during the last 5 seconds, disabling NO_CODE_WORD notifcation\n");
+		notify(ts, "STREAM_NOT_ENCRYPTED", "No encrypted packets were seen in the last 5 seconds.");
+		ts->stream_is_encrypted = 0;
+		ts->last_scrambled_packet_ts = 0;
 	}
 
 	// Decode packets
